--- a/exercicios/ex026/mq001/estilo/tela.css
+++ b/exercicios/ex026/mq001/estilo/tela.css
@@ -21,5 +21,20 @@ header > h1 {
 }
 
 menu ul {
+  list-style-type: none;
+  background-color: gray;
   
+}
+
+menu li {
+  background-color: rgb(78, 69, 69);
+  color: white;
+  display: inline-block;
+  padding: 10px;
+}
+
+article {
+  width: 600px;
+  display: block;
+  margin: auto;
 }
